# euler

./: Euler.cabal  Euler.hs  Liblist.hs  Libnum.hs  README.md  euler.hs
haskell/src/: Libdate.hs  Libnum.hs  Libtext.hs
rust/: Makefile  Solution19  Solution19.rs  Solution21.rs
rust/solution20/: Cargo.toml
rust/solution20/src/: main.rs
rust/solution21/: Cargo.toml
rust/solution21/src/: main.rs
rust/solution22/: Cargo.toml
rust/solution22/src/: main.rs
rust/solution23/: Cargo.toml
rust/solution23/src/: main.rs
src/: Euler.hs  Liblist.hs  Libmatrix.hs  Libnum.hs  Main.hs
